--- a/index.html
+++ b/index.html
@@ -1,12 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Frontend Laboratory</title>
-        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">   
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <title>Frontend Laboratory</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
-    <body>
-        <h1>Good luck!</h1>
-    </body>
+
+    <!-- Primero cargamos Jquery -->
+    <script src="http://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous">
+    </script>
+
+    <!-- Creamos nuestra función -->
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#menu_on').click(function () { // Al hacer click...
+                $('body').toggleClass('visible_menu'); // Añadimos o eliminamos la clase 'visible_menu' al body
+            })
+        });
+    </script>
+</head>
+
+<body>
+    <div class="head_bar">
+        <h1>FronteEnd Project</h1>
+    </div>
+    <div id="wrapper">
+        <header id="#header">
+            <a href="#" id="menu_on">
+                <span></span>
+                <span></span>
+                <span></span>
+            </a>
+        </header>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                ....
+            </ul>
+        </nav>
+        <section id="content">
+            ...Contenido...
+        </section>
+    </div>
+
+    <nav>
+        <ul>
+            <li><a href="#">Team</a></li>
+            <li><a href="#">Algorithms</a></li>
+
+        </ul>
+    </nav>
+</body>
 </html>
