--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
 
     <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script src="jaavscript/menu.js"></script>
+    <script src="javascript/menu.js"></script>
 </body>
 </html>
 
