--- a/index.html
+++ b/index.html
@@ -27,6 +27,40 @@
         </nav>
     </header>
 
+    <section id = "student_information">
+            <div class="left_col">
+                  <p>
+                     <img class="icon" src="images/p_icon.jpeg" >
+                     <label> Paolo Delgado </label>
+                  </p>
+             </div>
+             <div class="right_col">
+                  <p>
+                     <img class="icon" src="images/s_icon.jpeg" >
+                     <label> Sebastian Tinajeros </label>
+                  </p>
+             </div>
+             <div class="left_col">
+                  <p>
+                     <img class="icon" src="images/j_icon.jpeg" >
+                     <label> Joaquin Casusol </label>
+                  </p>
+              </div>
+              <div class="right_col">
+                  <p>
+                     <img class="icon" src="images/f_icon.jpeg" >
+                     <label> Fabian Concha  </label>
+                  </p>
+             </div>
+             <div class="left_col">
+                <p>
+                   <img class="icon" src="images/r_icon.jpeg" >
+                   <label> Rodrigo Aranzaens  </label>
+                </p>
+            </div>
+    </section>
+    
+
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="javascript/menu.js"></script>
 </body>
