--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <title>Frontend Laboratory</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="stylelogos.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, user-sacalable=no, initial-scale=1.0, maximun-scale=1.0;minimu-sacale=1.0;" />
-
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+    <script src="javascript/app.js"></script>
 
 
 </head>
@@ -15,53 +15,58 @@
 <body>
     <header>
         <div class="menu_bar">
-            <a href="#" class="bt-menu"><span class="icon-menu"></span>Frontend Project</a>
+            <a href="#" class="bt-menu"><i class="fas fa-align-justify"></i> Frontend Project</a>
         </div>
 
 
         <nav>
             <ul>
-                <li><a href="#"><span class="icon-users"></span>Team</a></li>
-                <li><a href="#"><span class="icon-embed2"></span>Algorithms</a></li>
+                <li><a href="index.html"><i class="fas fa-users bt-menu"></i>Team</a></li>
+                <li><a href="funciones.html"><i class="fas fa-code bt-menu"></i>Algorithms</a></li>
             </ul>
         </nav>
     </header>
 
-    <section id = "student_information">
-            <div class="left_col">
-                  <p>
-                     <img class="icon" src="images/p_icon.jpeg" >
-                     <label> Paolo Delgado </label>
-                  </p>
-             </div>
-             <div class="right_col">
-                  <p>
-                     <img class="icon" src="images/s_icon.jpeg" >
-                     <label> Sebastian Tinajeros </label>
-                  </p>
-             </div>
-             <div class="left_col">
-                  <p>
-                     <img class="icon" src="images/j_icon.jpeg" >
-                     <label> Joaquin Casusol </label>
-                  </p>
-              </div>
-              <div class="right_col">
-                  <p>
-                     <img class="icon" src="images/f_icon.jpeg" >
-                     <label> Fabian Concha  </label>
-                  </p>
-             </div>
-             <div class="left_col">
-                <p>
-                   <img class="icon" src="images/r_icon.jpeg" >
-                   <label> Rodrigo Aranzaens  </label>
-                </p>
-            </div>
+    <section id="student_information">
+        <div class="left_col">
+            <p>
+                <img class="icon" src="images/p_icon.jpeg">
+                <label> Paolo Delgado </label>
+            </p>
+        </div>
+        <div class="right_col">
+            <p>
+                <img class="icon" src="images/s_icon.jpeg">
+                <label> Sebastian Tinajeros </label>
+            </p>
+        </div>
+        <div class="left_col">
+            <p>
+                <img class="icon" src="images/j_icon.jpeg">
+                <label> Joaquin Casusol </label>
+            </p>
+        </div>
+        <div class="right_col">
+            <p>
+                <img class="icon" src="images/f_icon.jpeg">
+                <label> Fabian Concha  </label>
+            </p>
+        </div>
+        <div class="left_col">
+            <p>
+                <img class="icon" src="images/r_icon.jpeg">
+                <label> Rodrigo Aranzaens  </label>
+            </p>
+        </div>
     </section>
-    
+
+
+
+
 
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="javascript/menu.js"></script>
+
 </body>
 </html>
+
